# FeralAscent

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md
FeralAscent/: CmakeLists.txt
FeralAscent/include/framework/: Application.h  LevelSystem.h  entity.h  player.h
FeralAscent/src/: main.cpp
FeralAscent/src/framework/: Application.cpp  LevelSystem.cpp  entity.cpp  player.cpp
FeralAscentEngine/: CmakeLists.txt
FeralAscentEngine/assets/: level_2.txt
FeralAscentEngine/include/: EntryPoint.h
FeralAscentEngine/include/framework/: Actor.h  Application.h  AssetManager.h  Boundary.h  Component.h  Core.h  DebugDraw.h  LevelSystem.h  MathUtility.h  Object.h  PhysicsComponent.h  PhysicsSystem.h  Platform.h  Player.h  RayCastCallback.h  TextureComponent.h  Utilities.h  World.h
FeralAscentEngine/include/framework/Uni/: LevelSystem.h  UniPhysics.h  entity.h  player.h
FeralAscentEngine/src/: EntryPoint.cpp
FeralAscentEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  Boundary.cpp  Component.cpp  DebugDraw.cpp  LevelSystem.cpp  MathUtility.cpp  Object.cpp  PhysicsComponent.cpp  PhysicsSystem.cpp  Platform.cpp  Player.cpp  RayCastCallback.cpp  TextureComponent.cpp  World.cpp
FeralAscentEngine/src/framework/Uni/: LevelSystem.cpp  UniPhysics.cpp  entity.cpp  player.cpp
FeralAscentGame/: CmakeLists.txt  config.h.in
FeralAscentGame/assets/PNG/player/walking_sprites/: down_walk_1.xcf  down_walk_2.xcf  down_walk_3.xcf  down_walk_4.xcf  down_walk_5.xcf  down_walk_6.xcf  down_walk_7.xcf  down_walk_8.xcf  down_walk_9.xcf  left_walk_1.xcf  left_walk_2.xcf  left_walk_3.xcf  left_walk_4.xcf  left_walk_5.xcf  left_walk_6.xcf  left_walk_7.xcf  left_walk_8.xcf  left_walk_9.xcf  right_walk_1.xcf  right_walk_2.xcf  right_walk_3.xcf  right_walk_4.xcf  right_walk_5.xcf  right_walk_6.xcf  right_walk_7.xcf  right_walk_8.xcf  right_walk_9.xcf  up_walk_1.xcf  up_walk_2.xcf  up_walk_3.xcf  up_walk_4.xcf  up_walk_5.xcf  up_walk_6.xcf  up_walk_7.xcf  up_walk_8.xcf  up_walk_9.xcf
FeralAscentGame/include/: config.h
FeralAscentGame/include/enemy/: Enemy.h
FeralAscentGame/include/gameFramework/: GameApplication.h
FeralAscentGame/include/player/: Player.h
FeralAscentGame/src/enemy/: Enemy.cpp
FeralAscentGame/src/gameFramework/: GameApplication.cpp
FeralAscentGame/src/player/: Player.cpp
blah/include/: Blah.h
blah/src/: Blah.cpp  CMakeLists.txt
src/: main.cpp
